src/test/deca/syntax/invalid/synt/float_too_small.deca
// Description:
//    valeur differente de zero arrondie a zero
//    syntaxiquement incorrect
//
// Resultats:
//    rule literal failed predicate: {$tree != null}?
//
// Historique:
//    cree le 18/01/2023
//

{
    float y = 3.4028234e-46;
}